--- a/WebRoot/food/index.html
+++ b/WebRoot/food/index.html
@@ -60,10 +60,10 @@
 	<div id="mask_2" class="hide">
 		<div id="log_frame_2">
 			<div id="logo_div"><img src="images/logo.png" alt=""></div>
-			<form action="/example/html/form_action.asp" method="get">
-				<input type="text" id="username" class="Account_number" value="" placeholder="用户名*请以英文和数字构成">
-				<input type="text" id="Account_number_2" class="Account_number" value="" placeholder="邮箱">
-				<input type="password" id="Password_2" class="Password" value="" placeholder="密码">
+			<form action="/example/html/form_action.asp" method="post">
+				<input  name="username" type="text" id="username" class="Account_number" value="" placeholder="用户名*请以英文和数字构成">
+				<input name="email" type="text" id="Account_number_2" class="Account_number" value="" placeholder="邮箱">
+				<input name="pwd" type="password" id="Password_2" class="Password" value="" placeholder="密码">
 				<div name="cars" id="select">
 					北京
 				</div>
