--- a/WebRoot/food/index.html
+++ b/WebRoot/food/index.html
@@ -64,16 +64,13 @@
 				<input  name="username" type="text" id="username" class="Account_number" value="" placeholder="用户名*请以英文和数字构成">
 				<input name="email" type="text" id="Account_number_2" class="Account_number" value="" placeholder="邮箱">
 				<input name="pwd" type="password" id="Password_2" class="Password" value="" placeholder="密码">
-				<div name="cars" id="select">
-					北京
-				</div>
-				<ul class="hide">
-					<li>北京</li>
-					<li>上海</li>
-					<li>广州</li>
-					<li>深圳</li>
-					<li>无锡</li>
-				</ul>
+				<select name="cars" class="hide" id="select">
+					<option>北京</option>
+					<option>上海</option>
+					<option>广州</option>
+					<option>深圳</option>
+					<option>无锡</option>
+				</select>
 				<input type="submit" id="submit_2" value="注 册" disabled="true">
 			</form>
 			<p>已有账号？点此立即登录</p>
