html界面 首页修复

--- a/WebRoot/children_pages/story.html
+++ b/WebRoot/children_pages/story.html
@@ -1,4 +1,7 @@
-<!doctype html>
+<%@page pageEncoding="GBK" contentType="text/html; charset=GBK"%>
+<%@taglib uri="/struts-tags" prefix="s"%>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -35,7 +38,7 @@
 	<div id="nav">
 		<span> | 中国健康食品互联网第一品牌</span>
 		<div id="children_page">
-			<a href="../index.html" >首页</a>
+			<a href="../GetFoodList" >首页</a>
 			<a href="lowfood.html" >减脂健康餐</a>
 			<a href="fruit.html" >营养果蔬汁</a>
 			<a href="activity.html" >最新活动</a>
@@ -73,6 +76,8 @@
 招聘：hr@letsfit.cn</p>
 	</div>
 </body>
-<script src="../js/jquery.js"></script>
-<script src="../js/lowfood.js"></script>
+<script src="js/jquery.js"></script>
+<!-- <script src="js/gofit.js"></script> -->
+<script src="js/common.js"></script>
+<script type='text/javascript'></script>
 </html>
