--- a/WebRoot/children_pages/lowfood.html
+++ b/WebRoot/children_pages/lowfood.html
@@ -11,7 +11,7 @@
 	<div id="nav">
 		<span> | 中国健康食品互联网第一品牌</span>
 		<div id="children_page">
-			<a href="../index.html" >首页</a>
+			<a href="../GetFoodList" >首页</a>
 			<a href="lowfood.html" >减脂健康餐</a>
 			<a href="fruit.html" >营养果蔬汁</a>
 			<a href="activity.html" >最新活动</a>
@@ -38,6 +38,8 @@
 		</div>
 	</div>
 </body>
-<script src="../js/jquery.js"></script>
-<script src="../js/lowfood.js"></script>
+<script src="js/jquery.js"></script>
+<!-- <script src="js/gofit.js"></script> -->
+<script src="js/common.js"></script>
+<script type='text/javascript'></script>
 </html>
