--- a/WebRoot/food/index.html
+++ b/WebRoot/food/index.html
@@ -121,17 +121,17 @@
 <script src="js/jquery.js"></script>
 <script src="js/gofit.js"></script>
 <script src="js/common.js"></script>
-// <script type='text/javascript'>
-//     (function(m, ei, q, i, a, j, s) {
-//         m[a] = m[a] || function() {
-//             (m[a].a = m[a].a || []).push(arguments)
-//         };
-//         j = ei.createElement(q),
-//             s = ei.getElementsByTagName(q)[0];
-//         j.async = true;
-//         j.src = i;
-//         s.parentNode.insertBefore(j, s)
-//     })(window, document, 'script', '//eco-api.meiqia.com/dist/meiqia.js', '_MEIQIA');
-//     _MEIQIA('entId', 1835);
-// </script>
+<script type='text/javascript'>
+    (function(m, ei, q, i, a, j, s) {
+        m[a] = m[a] || function() {
+            (m[a].a = m[a].a || []).push(arguments)
+        };
+        j = ei.createElement(q),
+            s = ei.getElementsByTagName(q)[0];
+        j.async = true;
+        j.src = i;
+        s.parentNode.insertBefore(j, s)
+    })(window, document, 'script', '//eco-api.meiqia.com/dist/meiqia.js', '_MEIQIA');
+    _MEIQIA('entId', 1835);
+</script>
 </html>
