change the navbars of children pages

--- a/WebRoot/children_pages/fruit.html
+++ b/WebRoot/children_pages/fruit.html
@@ -17,7 +17,7 @@
 			<a href="activity.html" >最新活动</a>
 			<a href="story.html" >品牌故事</a>
 		</div>
-		<a id="download_button" href="#">
+	<!-- 	<a id="download_button" href="#">
 			DOWNLOAD APP
 		</a>
 		<div id="city_wrap">		
@@ -35,7 +35,7 @@
 			<a href="#" class="user_loggin">登录</a>
 			<a href="#" class="user_loggin">注册</a>
 			<a href="#" id="shopping"></a>
-		</div>
+		</div> -->
 	</div>
 </body>
 <script src="js/jquery.js"></script>
