--- a/WebRoot/children_pages/story.html
+++ b/WebRoot/children_pages/story.html
@@ -44,7 +44,7 @@
 			<a href="activity.html" >最新活动</a>
 			<a href="story.html" >品牌故事</a>
 		</div>
-		<a id="download_button" href="#">
+<!-- 		<a id="download_button" href="#">
 			DOWNLOAD APP
 		</a>
 		<div id="city_wrap">		
@@ -62,7 +62,7 @@
 			<a href="#" class="user_loggin">登录</a>
 			<a href="#" class="user_loggin">注册</a>
 			<a href="#" id="shopping"></a>
-		</div>
+		</div> -->
 	</div>
 	<div id="content">
 		<p id="story" style="font-weight:800;"> &nbsp&nbsp品牌故事</p>
