add link to the corp name

--- a/WebRoot/food/index.html
+++ b/WebRoot/food/index.html
@@ -100,7 +100,9 @@
 			</div>
 		</div>
 
-	<span id="intro_3" style="z-index: 100000;">苏ICP备15049153号  无锡恩得乐思科技有限公司</span>
+	<a href="http://www.miitbeian.gov.cn">
+		<span id="intro_3" style="z-index: 100000;">苏ICP备15049153号  无锡恩得乐思科技有限公司</span>
+	</a>
 
 <!-- 		<div id="intro">
 
