--- a/WebRoot/children_pages/lowfood.html
+++ b/WebRoot/children_pages/lowfood.html
@@ -6,6 +6,16 @@
 	<title>GOFit Food</title>
 	<link rel="stylesheet" href="../css/nav.css">
 	<link rel="stylesheet" href="../css/normalize.css">
+	<style>
+		.pics {
+			width: 1000px;
+			margin: 100px auto;
+		}
+		img {
+			display: block;
+			width: 1000px;
+		}
+	</style>
 </head>
 <body>
 	<div id="nav">
@@ -36,6 +46,13 @@
 			<a href="#" class="user_loggin">注册</a>
 			<a href="#" id="shopping"></a>
 		</div> -->
+	</div>
+	<div class="pics">
+		<img src="../images/1 (1).jpg" alt="">
+		<img src="../images/1 (2).jpg" alt="">
+		<img src="../images/1 (3).jpg" alt="">
+		<img src="../images/1 (4).jpg" alt="">
+		<img src="../images/1 (5).jpg" alt="">
 	</div>
 </body>
 <script src="js/jquery.js"></script>
